[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/prot/weap_shotgun.png" type="Texture" id=1]
[ext_resource path="res://sprites/prot/player-arms.png" type="Texture" id=2]
[ext_resource path="res://scripts/Shotgun.gd" type="Script" id=3]
[ext_resource path="res://sounds/temp_pistol.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/temp_shotgun_reload.ogg" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 18.0
} ]

[sub_resource type="Animation" id=8]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -4, 0 ), Vector2( 1, 0 ), Vector2( 0, 0 ) ]
}

[node name="Shotgun" type="Node2D"]
script = ExtResource( 3 )

[node name="ArmParent" type="Node2D" parent="."]

[node name="Gun" type="AnimatedSprite" parent="ArmParent"]
position = Vector2( 27.8315, 3.77376 )
scale = Vector2( 2.5, 2 )
frames = SubResource( 7 )
offset = Vector2( 7, 0 )

[node name="Arm" type="Sprite" parent="ArmParent"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ArmParent"]
anims/shoot = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="GunshotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.68

[node name="ReloadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 8.0
pitch_scale = 1.3
[connection signal="animation_finished" from="ArmParent/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
